2006-01-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/pychecker.mk:
	  09 -> 010
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/test/test_config.py:
	  fix some pychecker-y issues

2006-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/component-initialization-protocol:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/feedcomponent010.py:
	* flumotion/component/feedcomponent08.py:
	* flumotion/component/producers/videotest/videotest.py:
	* flumotion/job/job.py:
	* flumotion/manager/manager.py:
	* flumotion/test/test_component.py:
	* flumotion/test/test_htpasswdcrypt.py:
	* flumotion/test/test_pb.py:
	  remove the config argument from component __init__
	  basic scenario still works; time to verify others
	* flumotion/component/component.py:
	  add setup() to medium
	* flumotion/manager/component.py:
	  remove config dict from getComponent

2006-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/component-initialization-protocol:
	* flumotion/test/test_component.py:
	* flumotion/test/test_pb.py:
	* flumotion/test/test_htpasswdcrypt.py:
	* flumotion/component/producers/videotest/videotest.py:
	* flumotion/manager/manager.py:
	  separate component setup() from __init__()
	  invoke setup() explicitly after creating components
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/feedcomponent010.py:
	* flumotion/component/feedcomponent08.py:
	  same as above, but also:
	  move member var initialization back to __init__
	* flumotion/manager/component.py:
	  add a setup() method to proxy to the job-side component
	  turn _startComponent in a defer generator that also takes care of
	  setup() for now
	* flumotion/component/component.py:
	  provide remote_setup to manager's ComponentAvatar